<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:table="http://schemas.android.com/apk/res-auto"
    xmlns:row="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.prcy.app.gui.fragments.AnalizeSocialFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ru.prcy.app.gui.views.AnalizeResultTableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dip"
            table:title="@string/analize_results_main_params"
            table:icon="@drawable/ya">

            <ru.prcy.app.gui.views.AnalizeResultTableRowLayout
                android:id="@+id/yaCitation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                row:title="@string/analize_results_yandex_citation"
                />

            <ru.prcy.app.gui.views.AnalizeResultTableRowLayout
                android:id="@+id/yaIndex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                row:title="@string/analize_results_yandex_index"
                />

            <ru.prcy.app.gui.views.AnalizeResultTableRowLayout
                android:id="@+id/yaRank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                row:title="@string/analize_results_yandex_rank"
                />

            <ru.prcy.app.gui.views.AnalizeResultTableRowLayout
                android:id="@+id/yaAgs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                row:title="@string/analize_results_yandex_ags"
                />

            <ru.prcy.app.gui.views.AnalizeResultTableRowLayout
                android:id="@+id/yaGlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                row:title="@string/analize_results_yandex_glue"
                />

            <ru.prcy.app.gui.views.AnalizeResultTableRowLayout
                android:id="@+id/yaSafeBrowsing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                row:title="@string/analize_results_yandex_viruses"
                />


        </ru.prcy.app.gui.views.AnalizeResultTableLayout>



        <ru.prcy.app.gui.views.AnalizeResultTableLayout
            android:id="@+id/yacTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dip"
            table:title="@string/analize_results_yandex_yac">

            <ru.prcy.app.gui.views.AnalizeResultTableSingleColumnLayout
                android:id="@+id/yacHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                row:title="@string/analize_results_yandex_yac_header_not_found"
                />


        </ru.prcy.app.gui.views.AnalizeResultTableLayout>




    </LinearLayout>





</android.support.v4.widget.NestedScrollView>
