<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/nav_analize"
            android:icon="@drawable/ic_menu_analize"
            android:title="@string/action_analize" />

        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_menu_favourites"
            android:title="@string/action_favourites" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/action_login" />

        <!--<item-->
            <!--android:id="@+id/nav_settings"-->
            <!--android:icon="@drawable/ic_menu_settings"-->
            <!--android:title="@string/action_settings" />-->

</menu>
