<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:table="http://schemas.android.com/apk/res-auto"
    xmlns:row="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.prcy.app.gui.fragments.AnalizeSocialFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ru.prcy.app.gui.views.AnalizeResultTableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dip"
            table:title="@string/analize_results_main_params"
            table:icon="@drawable/go">


            <ru.prcy.app.gui.views.AnalizeResultTableRowLayout
                android:id="@+id/goIndex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                row:title="@string/analize_results_google_index"
                />

            <ru.prcy.app.gui.views.AnalizeResultTableRowLayout
                android:id="@+id/goSafeBrowsing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                row:title="@string/analize_results_google_viruses"
                />


        </ru.prcy.app.gui.views.AnalizeResultTableLayout>


    </LinearLayout>





</android.support.v4.widget.NestedScrollView>
